deploy/statefulset.yaml
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  serviceName: jellyfin
  replicas: 1
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 1000006
        runAsGroup: 1000004
      containers:
      - env:
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: spec.nodeName
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: docker.io/jellyfin/jellyfin
        imagePullPolicy: Always
        name: jellyfin
        ports:
        - containerPort: 8096
          protocol: TCP
        volumeMounts:
        - mountPath: /data/media
          name: media
          readOnly: True
        - mountPath: /config
          name: jellyfin-config
      restartPolicy: Always
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      - name: jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-config
