deploy/pihole-ingress.yaml
# pihole.ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: pihole
  name: pihole-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: pihole.192.168.1.241.nip.io
    http:
      paths:
        - path: /
          backend:
            serviceName: pihole-tcp
            servicePort: 8000
---
